--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
 
   },
 
-  "homepage": "http://metallicpearl.github.io/rockbusters/src"
+  "homepage": "http://metallicpearl.github.io/rockbusters"
 
 }
 
