--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 
   },
 
+  "homepage": "http://metallicpearl.github.io/rockbusters/",
+
   "name": "reactapp",
 
   "version": "0.1.0",
@@ -136,9 +138,7 @@
 
     "gh-pages": "^6.1.0"
 
-  },
-
-  "homepage": "http://metallicpearl.github.io/rockbusters/"
+  }
 
 }
 
