--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -49,3 +49,7 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
+        env: 
+          dbUrl: ${{ secrets.DB_URL }}
+          dbMasterKey: ${{ secrets.DB_MASTERKEY}};
+          dbCorsKey: ${{ secrets.DB_CORSKEY }};
