--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -37,6 +37,11 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
+      - name: Set environment variables
+        env: 
+          dbUrl: ${{ secrets.DB_URL }}
+          dbMasterKey: ${{ secrets.DB_MASTERKEY}};
+          dbCorsKey: ${{ secrets.DB_CORSKEY }};
 
 
   # Deployment job
