--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -6,10 +6,7 @@ on:
   push:
     branches: ["main"]
 
-env: 
-  dbUrl: ${{ secrets.DB_URL }}
-  dbMasterKey: ${{ secrets.DB_MASTERKEY }};
-  dbCorsKey: ${{ secrets.DB_CORSKEY }};
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,6 +27,10 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    env: 
+      dbUrl: ${{ secrets.DB_URL }}
+      dbMasterKey: ${{ secrets.DB_MASTERKEY }};
+      dbCorsKey: ${{ secrets.DB_CORSKEY }};
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,11 +44,11 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
       - name: expose URL
-        run: echo secrets.DB_URL
+        run: echo dbUrl
       - name: expose Master key
-        run: echo secrets.DB_MASTERKEY
+        run: echo dbMasterKey
       - name: expose Cors key 
-        run: echo ssecrets.DB_CORSKEY 
+        run: echo dbCorsKey 
 
 
 
