--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,9 +28,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env: 
-      dbUrl: ${{ dbSecrets.DBURL }}
-      dbMasterKey: ${{ dbSecrets.DBMASTERKEY }}
-      dbCorsKey: ${{ dbSecrets.DBCORSKEY }}
+      dbUrl: '${{ dbSecrets.DBURL }}'
+      dbMasterKey: '${{ dbSecrets.DBMASTERKEY }}'
+      dbCorsKey: '${{ dbSecrets.DBCORSKEY }}'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
