--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -27,6 +27,7 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    environment: dbSecrets
     env: 
       dbUrl: '${{ dbSecrets.DBURL }}'
       dbMasterKey: '${{ dbSecrets.DBMASTERKEY }}'
