--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -27,7 +27,6 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-    environment: dbSecrets
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -40,7 +39,14 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
+
+            
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
       - name : variables
+        environment: dbSecrets
         env: 
           dbUrl: ${{ dbSecrets.DBURL }}
           dbMasterKey: ${{ dbSecrets.DBMASTERKEY }}
@@ -49,9 +55,6 @@ jobs:
           echo $dbUrl
           echo $dbMasterKey 
           echo $dbCorsKey
-            
-
-
 
 
   # Deployment job
