--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -6,6 +6,12 @@ on:
   push:
     branches: ["main"]
 
+env: 
+  dbUrl: ${{ secrets.DB_URL }}
+  dbMasterKey: ${{ secrets.DB_MASTERKEY}}
+  dbCorsKey: ${{ secrets.DB_CORSKEY }}
+
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
