--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -7,9 +7,9 @@ on:
     branches: ["main"]
 
 env: 
-  dbUrl: ${{ dbSecrets.DBURL }}
-  dbMasterKey: ${{ dbSecrets.DBMASTERKEY}}
-  dbCorsKey: ${{ dbSecrets.DBCORSKEY }}
+  dbUrl: ${{ secrets.DBURL }}
+  dbMasterKey: ${{ secrets.DBMASTERKEY}}
+  dbCorsKey: ${{ secrets.DBCORSKEY }}
 
 
   # Allows you to run this workflow manually from the Actions tab
