--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -7,9 +7,9 @@ on:
     branches: ["main"]
 
 env: 
-  dbUrl: ${{ secrets.DBURL }}
-  dbMasterKey: ${{ secrets.DBMASTERKEY }}
-  dbCorsKey: ${{ secrets.DBCORSKEY }}
+  process.env.dbUrl: ${{ secrets.DBURL }}
+  process.env.dbMasterKey: ${{ secrets.DBMASTERKEY }}
+  process.env.dbCorsKey: ${{ secrets.DBCORSKEY }}
 
 
   # Allows you to run this workflow manually from the Actions tab
