--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
       - name: test print script
-        run: echo my value is '${{ secrets.DB_URL }}'
+        run: echo my value is "$DB_URL"
 
   # Deployment job
   deploy:
