--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -31,11 +31,11 @@ jobs:
     steps:
       - name: create env
         run: 
-          echo $ENVCONTENT | base64 -d > /.env
+          echo $ENVCONTENT | base64 -d > .env
         env:
           ENVCONTENT: ${{ secrets.ENVCONTENT }}
       - name: show env
-        run: echo /.env
+        run: echo .env
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Pages
