--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 
   "homepage": "http://metallicpearl.github.io/rockbusters/",
 
-  "name": "reactapp",
+  "name": "rockbusters",
 
   "version": "0.1.0",
 
