--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
 
     "react-toggle": "^4.1.3",
 
+    "react-wrap-balancer": "^1.1.0",
+
     "sound-play": "^1.1.0",
 
     "use-sound": "^4.0.1",
